Updated data i/o section, including .rds file caveats and making data public

--- a/04-coding-practices.Rmd
+++ b/04-coding-practices.Rmd
@@ -113,9 +113,11 @@ mean_Y = calc_fluseas_mean(
 )
 ```
 
-## The here package
+## The `here` package
 
 The `here` package is one great R package that helps multiple collaborators deal with the mess that is working directories within an R project structure. Let's say we have an R project at the path `/home/oski/Some-R-Project`. My collaborator might clone the repository and work with it at some other path, such as  `/home/bear/R-Code/Some-R-Project`. Dealing with working directories and paths explicitly can be a very large pain, and as you might imagine, setting up a Config with paths requires those paths to flexibly work for all contributors to a project. This is where the `here` package comes in and this a [great vignette describing it](https://github.com/jennybc/here_here).
+
+For more motivation on why you should use the `here` and R projects (`.Rproj`), read this excellent blog post from [Tidyverse](https://www.tidyverse.org/articles/2017/12/workflow-vs-script/).
 
     
 ## Data input/output (I/O)
@@ -125,8 +127,25 @@ One of the most common ways to load and save data in Base R is with the `load()`
 
 - **Note**: if you have many related R objects you would have otherwise saved all together using the `save` function, the functional equivalent with `RDS` would be to create a (named) list containing each of these objects, and saving it.
 
+- **Note**: there is an important caveat for `.rds` files: they are not automatically backward compatible across different versions of R!  So, while they are very useful in general, beware.  See, for example, this thread on [StackExchange](https://stackoverflow.com/questions/56704638/write-a-file-using-saverds-so-that-it-is-backwards-compatible-with-old-versi).  `.csv` files embed slightly less information (typically), but are more stable across different versions of R.
+
 ### CSVs
 Once again, the `readr` package as part of the Tidvyerse is great, with a much faster `read_csv()` than Base R's `read.csv()`. For massive CSVs (> 5 GB), you'll find `data.table::fread()` to be the fastest CSV reader in any data science language out there. For writing CSVs, `readr::write_csv()` and `data.table::fwrite()` outclass Base R's `write.csv()` by a significant margin as well.
+
+### Publishing public data
+**NEVER** push a dataset into the public domain (e.g., GitHub, OSF) without first checking with Ben to ensure that it is appropriately de-identified and we have approval from the sponsor and/or human subjects review board to do so.
+
+If you are releasing data into the public domain, then consider making available _at minimum_ a `.csv` file and a codebook of the same name (note: you should have a codebook for internal data as well). We often also make available `.rds` files as well. For example, your `mystudy/data/public` directory could include three files for a single dataset, two with the actual data in `.rds` and `.csv` formats, and a third that describes their contents:
+
+```
+analysis_data_public.csv
+analysis_data_public.rds
+analysis_data_public_codebook.txt
+```
+
+In general, datasets are usually too big to save on GitHub, but occasionally they are small. Here is an example of where we actually pushed the data directly to GitHub: https://github.com/ben-arnold/enterics-seroepi/tree/master/data . If you inspect the codebooks you can see an example of what they could contain (overview, variable descriptions, references).
+
+If the data are bigger, then maintaining them under version control in your git repository can be unweildy. Instead, we recommend using another stable repository that has version control, such as the Open Science Framework ([osf.io](https://osf.io)).  For example, all of the data from the WASH Benefits trials (led by investigators at Berkeley, icddr,b, IPA-Kenya and others) are all stored through data components nested within in OSF projects: https://osf.io/tprw2/.
 
 ## Tidyverse
 
