--- a/03-directory-structure.Rmd
+++ b/03-directory-structure.Rmd
@@ -99,6 +99,7 @@ With subdirectories that generally look like this:
 .gitignore
 primary-analysis.Rproj
 0-config.R
+0-shared-functions.R
 0-primary-analysis-run-all.sh
 1-dm /
     0-dm-run-all.sh
@@ -135,6 +136,11 @@ An "R Project" can be created within RStudio by going to `File >> New Project`. 
 ### Configuration ('config') File
 This is the single most important file for your project. It will be responsible for a variety of common tasks, declare global variables, load functions, declare paths, and more. _Every other file in the project_ will begin with `source("0-config")`, and its role is to reduce redundancy and create an abstraction layer that allows you to make changes in one place (`0-config.R`) rather than 5 different files. To this end, paths that will be referenced in multiple scripts (e.g., a `clean_data_path`) can be declared in `0-config.R` and simply referred to by its variable name in scripts. If you ever want to change things, rename them, or even switch from a downsample to the full data, all you would then to need to do is modify the path in one place and the change will automatically update throughout your project. See the example config file for more details. The paths defined in the `0-config.R` file assume that users have opened the `.Rproj` file, which sets the directory to the top level of the project. 
 
+This [GitHub repository](https://github.com/jadebc-berkeley/WBB-STH-Kato-Katz) that has replication files for [this study](https://www.biorxiv.org/content/10.1101/629501v1) includes an example of a streamlined `config.R` file, with all packages loaded and directory references defined.
+
+### Shared Functions File
+If you write a custom function for an analysis and need to use it repeatedly across multiple analysis scripts, then it is better to consolidate it into a single shared functions script and source that file into the analysis scripts.  The reason for this is that it enables you to edit the function in a single place and ensure that the changes are implemented across your entire workflow. In extreme cases, you might have so many shared functions that you need an entire subdirectory with separate scripts. [This repository](https://github.com/HBGD-UCB/ki-longitudinal-manuscripts/) includes an example (`0-project-functions`) of a large analysis (currently still a work in progress).
+
 ### Order Files and Subdirectories
 This makes the jumble of alphabetized filenames much more coherent and places similar code and files next to one another. Although sometimes there is not a linear progression from 1 to 2 to 3, in general the structure helps reflect how data flows from start to finish and allows us to easily map a script to its output (i.e. `primary-analysis/R/5-laz/1-laz-unadjusted-analysis.R` => `primary-analysis/output/5-laz/1-laz-unadjusted-analysis.RDS`).  That is, the code repository and the output are approximately mirrored. If you take nothing else away from this guide, this is the single most helpful suggestion to make your workflow more coherent. Often the particular order of files will be in flux until an analysis is close to completion. At that time it is important to review file order and naming and reproduce everything prior to drafting a manuscript. 
 
@@ -151,6 +157,7 @@ Another approach for organizing your code repository is to name all of your scri
 .gitignore
 primary-analysis.Rproj
 0-config.R
+0-shared-functions.R
 0-primary-analysis-run-all.sh
 1-dm /
     0-dm-run-all.sh
